# rgb-spark

./: .gitignore  CLAUDE.md  PITCH.en.md  PITCH.md  POSITIONING.md  README.md  RGB-ON-SPARK.md  RGB-SPK.md  SPARK-UTK.md
e2e-tests/: .env.example  BUG-REPORT.md  README.md  package-lock.json  package.json  tsconfig.json
e2e-tests/src/: env.ts
e2e-tests/src/cli/: claim-deposits.ts  info.ts  run-scenario.ts  setup.ts
e2e-tests/src/lib/: derive-seed.ts  spark-core.ts  storage-polyfill.ts  test-wallet.ts
e2e-tests/src/scenarios/: happy-path-trade.ts  htlc-default-signer.ts  htlc-manual-claim.ts  htlc-only.ts  htlc-probe-sync.ts  smoke.ts  wasm-smoke.ts
forks/: .gitignore  README.md
forks/bp-core/dbc/src/: proof.rs
forks/bp-core/dbc/src/keytweak/: mod.rs
forks/rgb-consensus/: .cargo_vcs_info.json  Cargo.toml
forks/rgb-consensus/src/validation/: commitments.rs  validator.rs
forks/rgb-spark-core/: Cargo.toml
forks/rgb-spark-core/src/: lib.rs
forks/wasm-sniff/: Cargo.toml
forks/wasm-sniff/src/: lib.rs
frontend/: familier.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: tweak-smoke.mjs
frontend/src/: App.tsx  FamilierPage.tsx  familier-main.tsx
frontend/src/lib/: assetBinding.ts  claimedLeafStore.ts  consignmentRelay.ts  envelopeSign.ts  familierKey.ts  familierStash.ts  htlcProbe.ts  htlcSwap.ts  leafSelection.ts  metadataRelay.ts  nostrKey.ts  orderPreimageStash.ts  orderbookRelay.ts  pathTweakStorage.ts  registryRelay.ts  relayEvents.ts  rgbAwareSigner.ts  rgbStash.ts  secretVault.ts  settlementAutoEmit.ts  settlementInbox.ts  sparkCore.ts  sparkWallet.ts  utxoLookup.ts
frontend/src/lib/spark-core/: rgb_spark_core.d.ts  rgb_spark_core.js  rgb_spark_core_bg.wasm  rgb_spark_core_bg.wasm.d.ts
relay/: package-lock.json  package.json  tsconfig.json
relay/scripts/: orderbook-smoke.ts
relay/src/: events.ts  index.ts  metadata.ts  orderbook.ts  registry.ts
scoping/: 01-crate-map.md  03-test-vectors.md  05-spark-sdk-leaf-surface.md
scoping/02-seal-prototype/: Cargo.toml
scoping/02-seal-prototype/src/: lib.rs
scoping/04-repro-ts/: package-lock.json  package.json  repro.mjs
scripts/: build-spark-core.sh
